# usmarket-swing-trading

./: .gitignore  AGENT_BOOT.md  CLAUDE.md  PROMPTS.md  README.md  process.md  pyproject.toml
.claude/: settings.json
.claude/agents/: artifact-validator.md  code-reviewer.md  duplicate-detector.md  phase-gate.md  prompt-evaluator.md  pyqt-architect.md  pyqt-code-reviewer.md  pyqt-code-simplifier.md  pyqt-code-writer.md  session-finalizer.md  test-writer.md
.claude/commands/: auto-feature.md  dev-context.md  doc-check.md  finish.md  fix-issue.md  hookify.md  new-feature.md  push-updates.md  pyqt-comment-analyzer.md  refactor.md  resume.md  review.md  rn.md  trace.md  workspace.md  write-tests.md
.claude/hooks/: agent-banner.ps1  refresh_skeleton.py  review_reminder.py
.claude/rules/: artifact-conventions.md  code-style.md  testing.md  traceability.md
.claude/skills/: concise.md  workspace.md
agentqt_templates/: COMPARE.md
agentqt_templates/option_a/: README.md
agentqt_templates/option_b/: agentqt_bootstrap.md
agentqt_templates/option_c/: README.md
alm/: CLAUDE.md  __init__.py  __main__.py  main_window.py  parser.py
installer/: CLAUDE.md  README.md  __init__.py  __main__.py  builder.py  config.py  config_example.yaml  launch_installer.py  main_window.py  signer.py  theme.py
installer/installer_output/: updater_manifest.json
installer/templates/: setup.iss.j2  setup.nsi.j2
us_swing/: CONTEXT.md  DEVLOG.md  USSwing.spec  idea.md  requirements.md  run_gui.py  usswing_installer.yaml
us_swing/.skeleton_cache/: skeleton.json
(+209 files in other folders)
